# email-triage-openenv

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  upload.py
env/: email_triage_env.py
server/: app.py
tasks/: tasks.py
