[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "email-triage-openenv"
version = "1.0.0"
description = "A real-world email triage OpenEnv environment"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "fastapi",
    "uvicorn",
]